update api update user

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^6.1.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
+    "nodemon": "^2.0.15",
     "underscore": "^1.13.2",
     "uuid": "^8.3.2"
   }
